--- a/styles/Globals.scss
+++ b/styles/Globals.scss
@@ -24,7 +24,7 @@ a {
   width: 100%;
 }
 
-.cards {
+.section {
   display: flex;
   flex-wrap: wrap;
   max-width: 900px;
@@ -32,13 +32,4 @@ a {
   margin: auto;
   justify-content: center;
   align-items: center;
-}
-.search {
-  width: 100%;
-  max-width: 900px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
 }
