--- a/styles/Search.scss
+++ b/styles/Search.scss
@@ -4,6 +4,8 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  max-width: 900px;
+  margin: auto;
   &__container {
     display: flex;
     flex-direction: row;
