--- a/styles/Form.scss
+++ b/styles/Form.scss
@@ -91,7 +91,7 @@
     text-align: center;
     width: 300px;
     height: 50px;
-    background: red;
+    background: $red1;
     border-radius: 16px;
     color: #000;
   }
