--- a/styles/Nav.scss
+++ b/styles/Nav.scss
@@ -30,6 +30,9 @@
       font-size: 20px;
       margin: auto 10px;
       position: relative;
+      background: transparent;
+      border: none;
+      outline: none;
       transition: all 0.3s ease-in-out;
       list-style: none;
       cursor: pointer;
