--- a/styles/Form.scss
+++ b/styles/Form.scss
@@ -20,7 +20,10 @@
     & label {
 
     }
-    & input {
+    & input[type="text"], 
+    & input[type="number"], 
+    & select,
+    & textarea {
       justify-self: flex-end;
       width: 100%;
       max-width: 300px;
@@ -32,6 +35,12 @@
       outline: none;
       font-size: 20px;
       font-family: $fontFamily;
+    }
+    & textarea {
+      height: 100px;
+    }
+    & input[type="file"]{
+      margin: 5px 10px;
     }
   }
   & button {
