--- a/styles/Search.scss
+++ b/styles/Search.scss
@@ -81,12 +81,20 @@
     height: 50px;
     border-radius: 10px;
     background: $orange3;
+    border: none;
+    outline: none;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
+    font-family: $fontFamily;
+    font-size: 20px;
     transition: 0.3s ease-in-out;
     cursor: pointer;
     &:hover {
       background: $orange2;
       box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
+      transition: 0.3s ease-in-out;
+    }
+    &.active {
+      background: $orange2;
       transition: 0.3s ease-in-out;
     }
     & img {
