--- a/styles/Form.scss
+++ b/styles/Form.scss
@@ -42,6 +42,9 @@
     & input[type="file"]{
       margin: 5px 10px;
     }
+    & img {
+      max-width: 100%;
+    }
   }
   & button {
     display: flex;
