--- a/styles/ActionInfo.scss
+++ b/styles/ActionInfo.scss
@@ -4,6 +4,5 @@
   text-align: center;
   border: none;
   border-radius: 20px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
-  background: $orange3;
+  background: lightgreen;
 }
