remove fav and fix add

--- a/styles/Card.scss
+++ b/styles/Card.scss
@@ -66,6 +66,9 @@
         color: $orange3;
         transition: all 0.3s ease-in-out;
       }
+      &.favorite {
+        color: $orange1; 
+      }
     }
   }
   
