bag modal style

--- a/styles/Var.scss
+++ b/styles/Var.scss
@@ -7,6 +7,7 @@ $white1: #ffffff;
 $white2: #eceae7;
 $red1: #ff1744;
 $yellow1: #ffff72;
+$green1: #0aaf0a;
 
 
 $fontFamily: 'Poppins', sans-serif;
