--- a/styles/Bag.scss
+++ b/styles/Bag.scss
@@ -37,22 +37,25 @@
   }
   &__details {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: flex-start;
     align-items: center;
     min-width: 70%;
     & h5 {
       color: #000;
-      font-size: 22px;
+      font-size: 20px;
     }
     &-qty {
       display: flex;
       flex-direction: row;
-      font-size: 18px;
-      background: transparent;
+      justify-content: flex-end;
+      align-items: center;
+      font-size: 14px;
+      width: 100%;
+      max-height: 100%;
       & h6 {
-        color: #999;
-        font-size: 20px;
+        color: $orange1;
+        font-size: 14px;
       }
       & button {
         color: #fff;
@@ -62,6 +65,7 @@
         width: 20px;
         border-radius: 50%;
         border: none;
+        cursor: pointer;
         &.minus {
           background: $red1;
         }
@@ -69,6 +73,34 @@
           background: $green1;
         }
       }
+    }
+  }
+  & .delete {
+    color: $red1;
+    font-size: 20px;
+    border: none;
+    background: transparent;
+    cursor: pointer;
+  }
+  & .button-link {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+    width: 150px;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
+    background: $orange2;
+    font-family: $fontFamily;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
+    transition: 0.3s ease-in-out;
+    cursor: pointer;
+    &:hover {
+      background: $orange1;
+      box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
+      transition: 0.3s ease-in-out;
     }
   }
 }
