--- a/styles/Bag.scss
+++ b/styles/Bag.scss
@@ -16,10 +16,34 @@
     -5px 0 10px rgba(255, 255, 255, 0.2);
   z-index: 10;
   overflow-y: scroll;
-  & h3 {
-    width: 100%;
-    text-align: center;
-    font-size: 20px;
+  &__top {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    & h3 {
+      width: 100%;
+      text-align: center;
+      font-size: 20px;
+    }
+    & button {
+      border: none;
+      outline: none;
+      background: transparent;
+      cursor: pointer;
+      color: $red1;
+    }
+  }
+  &__total {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 20px;
+    & h6 {
+      color: $orange1;
+      font-size: 14px;
+    }
   }
   &__item {
     width: 100%;
@@ -89,7 +113,7 @@
     align-items: center;
     margin: 5px;
     width: 150px;
-    height: 40px;
+    min-height: 40px;
     border-radius: 10px;
     border: none;
     background: $orange2;
