--- a/styles/MyProduct.scss
+++ b/styles/MyProduct.scss
@@ -7,6 +7,19 @@
     border-radius: 8px;
     background: $orange3;
     text-align: center;
+    & textarea {
+      justify-self: flex-end;
+      width: 100%;
+      max-width: 300px;
+      height: 70px;
+      margin: 5px 10px;
+      border-radius: 16px;
+      background: $white2;
+      border: none;
+      outline: none;
+      font-size: 14px;
+      font-family: $fontFamily;
+    }
   }
   & img {
     max-height: 45px;
@@ -28,6 +41,32 @@
     }
     &.delete {
       background: $red1;
+    }
+  }
+  & .qty {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    & h6 {
+      color: $orange1;
+      font-size: 14px;
+    }
+    & button {
+      color: #fff;
+      margin: 0 5px;
+      border: none;
+      height: 20px;
+      width: 20px;
+      border-radius: 50%;
+      border: none;
+      cursor: pointer;
+      &.minus {
+        background: $red1;
+      }
+      &.plus {
+        background: $green1;
+      }
     }
   }
   
