--- a/styles/Var.scss
+++ b/styles/Var.scss
@@ -11,3 +11,25 @@ $green1: #0aaf0a;
 
 
 $fontFamily: 'Poppins', sans-serif;
+
+.button {
+  display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+    width: 150px;
+    min-height: 40px;
+    border-radius: 10px;
+    border: none;
+    background: $orange2;
+    font-family: $fontFamily;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
+    transition: 0.3s ease-in-out;
+    cursor: pointer;
+    &:hover {
+      background: $orange1;
+      box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
+      transition: 0.3s ease-in-out;
+    }
+}
