--- a/styles/Var.scss
+++ b/styles/Var.scss
@@ -32,4 +32,7 @@ $fontFamily: 'Poppins', sans-serif;
       box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
       transition: 0.3s ease-in-out;
     }
+    &.delete {
+      background: $red1;
+    }
 }
