--- a/styles/Styles.scss
+++ b/styles/Styles.scss
@@ -5,7 +5,7 @@
 @import 'Search';
 @import 'Card';
 @import 'ProductSite';
-@import 'MyProduct';
+@import 'Table';
 @import 'ActionInfo';
 @import 'Bag';
 @import 'Orders';
