--- a/styles/Form.scss
+++ b/styles/Form.scss
@@ -109,3 +109,17 @@
     color: #000;
   }
 }
+
+.form__small {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background: $orange3;
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+  min-height: 200px;
+  border-radius: 24px;
+  padding: 10px;
+}
