--- a/styles/ActionInfo.scss
+++ b/styles/ActionInfo.scss
@@ -1,6 +1,7 @@
 .actionInfo {
   width: 100%;
   height: 50px;
+  margin: 10px auto;
   text-align: center;
   border: none;
   border-radius: 20px;
