--- a/styles/Globals.scss
+++ b/styles/Globals.scss
@@ -33,3 +33,14 @@ a {
   justify-content: center;
   align-items: center;
 }
+
+footer {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background: $orange3;
+  margin-top: 20px;
+}
