--- a/styles/Card.scss
+++ b/styles/Card.scss
@@ -10,6 +10,7 @@
   transition: 0.3s ease-in-out;
   position: relative;
   overflow: hidden;
+  cursor: pointer;
   &:hover {
     box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.25);
     transition: 0.3s ease-in-out;
@@ -25,6 +26,12 @@
     margin: 0 auto;
     font-size: 20px;
     color: $blue;
+  }
+  &__wrapper{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
   }
   &__info {
     display: flex;
@@ -56,6 +63,7 @@
     justify-content: space-between;
     align-items: center;
     margin: 5px 10px;
+    z-index: 2;
     & button {
       transition: all 0.3s ease-in-out;
       cursor: pointer;
