--- a/styles/Globals.scss
+++ b/styles/Globals.scss
@@ -5,6 +5,7 @@ body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
   max-width: 100vw;
+  min-height: 100vh;
   background: #eceae7;
   overflow-x: hidden;
 }
@@ -35,6 +36,8 @@ a {
 }
 
 footer {
+  position: absolute;
+  bottom: 0;
   width: 100%;
   height: 50px;
   display: flex;
