--- a/styles/Nav.scss
+++ b/styles/Nav.scss
@@ -18,6 +18,9 @@
     margin-left: 24px;
     font-weight: bold;
     text-decoration: none;
+    @media screen and (max-width:768px) {
+      display: none;
+    }
   }
 
   & ul {
