--- a/styles/Search.scss
+++ b/styles/Search.scss
@@ -70,6 +70,11 @@
     width: 100%;
     overflow-x: scroll;
     margin: auto;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
   &__box {
     display: flex;
