--- a/styles/Search.scss
+++ b/styles/Search.scss
@@ -5,29 +5,16 @@
   align-items: center;
   width: 100%;
   max-width: 900px;
-  margin: auto;
-  &__container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    margin: 20px auto;
-    @media screen and (max-width: 768px) {
-      flex-direction: column;
-    }
-  }
   &__box {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    min-width: 70%;
+    min-width: 100%;
     height: 50px;
     padding: 5px;
-    margin-right: 5px;
-    background: $orange3;
-    border-radius: 20px;
+    background: #ffffff;
+    border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
     & input[type='text'] {
       color: #333;
@@ -45,9 +32,9 @@
 .priceBox {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
-  width: 100%;
+  width: 300px;
   height: 50px;
   @media screen and (max-width: 768px) {
     width: 70%;
@@ -60,8 +47,14 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
+  &__title {
+    font-size: 16px;
+    font-weight: normal;
+    color: #ffffff;
+    text-shadow: 0 0 1px rgba(0, 0, 0, 1);
+  }
   &__container {
     display: flex;
     flex-direction: row;
@@ -81,16 +74,17 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    padding: 0;
     margin: 5px;
-    width: 150px;
-    height: 50px;
-    border-radius: 10px;
-    background: $orange3;
+    width: 120px;
+    height: 40px;
+    border-radius: 4px;
+    background: #ffffff;
     border: none;
     outline: none;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
     font-family: $fontFamily;
-    font-size: 20px;
+    font-size: 16px;
     transition: 0.3s ease-in-out;
     cursor: pointer;
     &:hover {
@@ -103,13 +97,14 @@
       transition: 0.3s ease-in-out;
     }
     & img {
-      width: 40px;
       height: 40px;
-      border-radius: 8px;
-      margin: 2px;
+      width: 40px;
+      border-radius: 4px;
+      margin-right: 4px;
     }
     & h5 {
       color: #333;
+      font-weight: normal;
     }
   }
 }
