--- a/styles/Card.scss
+++ b/styles/Card.scss
@@ -4,9 +4,9 @@
   width: 260px;
   height: 375px;
   margin: 10px;
-  border-radius: 24px;
-  background: $orange3;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 16px;
+  background: #ffffff;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
   transition: 0.3s ease-in-out;
   position: relative;
   overflow: hidden;
@@ -14,43 +14,65 @@
   &:hover {
     box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.25);
     transition: 0.3s ease-in-out;
-    background: $orange2;
+    transform: scale(1.02);
+  }
+  &.highlight {
+    border: 2px solid $orange1;
   }
   & img {
-    width: 220px;
+    width: 260px;
     height: 200px;
-    margin: 16px auto;
-    border-radius: 16px;
+    border-radius: 16px 16px 0 0;
+    box-shadow: 0 1px 1px rgba(0,0,0,.25);
   }
   & h3 {
-    margin: 0 auto;
-    font-size: 20px;
+    margin: 5px;
+    font-size: 16px;
     color: $blue;
+    font-weight: bold;
   }
   &__wrapper{
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
   }
-  &__info {
+  &__product {
+    &-name {
+      margin: 5px;
+      font-size: 16px;
+      color: $blue;
+    }
+    &-bakery {
+      margin: 0 5px;
+      font-size: 14px;
+      font-weight: normal;
+      color: #333;
+    }
+    &-price {
+      margin: 0 5px;
+      font-size: 16px;
+      color: $orange1;
+    }
+  }
+  &__rank {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin: 0 5px;
-    & h4 {
+    &-score {
+      margin-right: 5px;
       font-size: 14px;
-      color: $blue;
-      font-weight: 500;
-      max-width: 100px;
-      flex-wrap: wrap;
-      &:nth-child(1) {
-        align-self: flex-start;
-      }
-      &:nth-child(2) {
-        align-self: flex-end;
-      }
+      color: $orange2;
+    }
+    &-star {
+      color: $orange2;
+      width: 16px;
+      height: 16px;
+      
     }
   }
   &__actions {
