--- a/styles/Globals.scss
+++ b/styles/Globals.scss
@@ -6,7 +6,7 @@ body {
   font-family: 'Poppins', sans-serif;
   max-width: 100vw;
   min-height: 100vh;
-  background: #eceae7;
+  background: #ffffff;
   overflow-x: hidden;
 }
 
