--- a/styles/Search.scss
+++ b/styles/Search.scss
@@ -10,12 +10,15 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    min-width: 100%;
+    width: 100%;
     height: 50px;
     padding: 5px;
     background: #ffffff;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
+    @media screen and (max-width: 768px) {
+      max-width: 90%;
+    }
     & input[type='text'] {
       color: #333;
       background: transparent;
@@ -29,31 +32,19 @@
   }
 }
 
-.priceBox {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  width: 300px;
-  height: 50px;
-  @media screen and (max-width: 768px) {
-    width: 70%;
-    justify-content: center;
-    margin-top: 40px;
-  }
-}
-
 .category {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   width: 100%;
+  padding-bottom: 10px;
   &__title {
     font-size: 16px;
     font-weight: normal;
     color: #ffffff;
     text-shadow: 0 0 1px rgba(0, 0, 0, 1);
+    margin-left: 5px;
   }
   &__container {
     display: flex;
@@ -76,7 +67,7 @@
     align-items: center;
     padding: 0;
     margin: 5px;
-    width: 120px;
+    min-width: 120px;
     height: 40px;
     border-radius: 4px;
     background: #ffffff;
