--- a/styles/Card.scss
+++ b/styles/Card.scss
@@ -11,6 +11,11 @@
   position: relative;
   overflow: hidden;
   cursor: pointer;
+  @media screen and (max-width: 640px) {
+    min-width: 208px; // 20% less
+    width: 208px; 
+    height: 300px;
+  }
   &:hover {
     box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.25);
     transition: 0.3s ease-in-out;
@@ -24,6 +29,10 @@
     height: 200px;
     border-radius: 16px 16px 0 0;
     box-shadow: 0 1px 1px rgba(0,0,0,.25);
+    @media screen and (max-width: 640px) {
+      width: 208px; 
+      height: 160px;
+    }
   }
   & h3 {
     margin: 5px;
@@ -63,10 +72,13 @@
     justify-content: center;
     align-items: center;
     margin: 0 5px;
+    @media screen and (max-width: 620px) {
+      margin-top: -20px;
+    }
     &-score {
       margin-right: 5px;
       font-size: 14px;
-      color: $orange2;
+      color: $orange1;
     }
     &-star {
       color: $orange2;
