--- a/styles/Globals.scss
+++ b/styles/Globals.scss
@@ -33,6 +33,28 @@ a {
   margin: auto;
   justify-content: center;
   align-items: center;
+  &__name {
+    width: 100%;
+    margin: 10px auto;
+    font-size: 16px;
+    font-weight: 400;
+    position: relative;
+    background: $orange3;
+    padding: 5px 10px;
+    &::after {
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 0;
+      width: 60px;
+      height: 100%;
+      clip-path: polygon(0 0, 0 100%, 100% 0);
+      background: $orange1;
+    }
+    & span {
+      margin-left: 30px;
+    }
+  }
 }
 
 footer {
