fav, add new site

--- a/styles/Nav.scss
+++ b/styles/Nav.scss
@@ -105,7 +105,7 @@
       }
     }
     &:nth-child(2) {
-      background: $white1;
+      background: #000000;
       width: 100%;
       &.open {
         transform: rotate(-45deg);
