--- a/styles/Form.scss
+++ b/styles/Form.scss
@@ -8,8 +8,15 @@
   max-width: 900px;
   height: auto;
   min-height: 400px;
-  border-radius: 24px;
+  border-radius: 16px;
   padding: 10px;
+  &__triangle {
+    margin-right: -20px;
+    width: 60px;
+    height: 30px;
+    clip-path: polygon(0 0, 0 100%, 100% 0);
+    background: $orange1;
+  }
   & div {
     display: flex;
     flex-direction: row;
@@ -18,7 +25,7 @@
     width: 100%;
     max-width: 500px;
     & label {
-
+      font-size: 16px;
     }
     & input,
     & input[type="text"], 
@@ -30,8 +37,8 @@
       max-width: 300px;
       height: 50px;
       margin: 5px 10px;
-      border-radius: 16px;
-      background: $white2;
+      border-radius: 4px;
+      background: $white1;
       border: none;
       outline: none;
       font-size: 20px;
@@ -40,14 +47,11 @@
     & textarea {
       height: 100px;
     }
-    & input[type="file"]{
-      margin: 5px 10px;
-    }
     & img {
       max-width: 100%;
     }
   }
-  & button {
+  &__submit {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -55,19 +59,21 @@
     margin: 5px;
     width: 150px;
     height: 50px;
-    border-radius: 10px;
+    border-radius: 8px;
     border: none;
     font-size: 20px;
     font-family: $fontFamily;
     background: $orange2;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
     transition: 0.3s ease-in-out;
     cursor: pointer;
     &:hover {
       background: $orange1;
-      box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
       transition: 0.3s ease-in-out;
     }
+  }
+  &__ps {
+    font-size: 12px;
+    color: #333;
   }
   & p {
     display: flex;
@@ -108,6 +114,10 @@
     border-radius: 16px;
     color: #000;
   }
+  &__images {
+    display: flex;
+    flex-direction: column !important;
+  }
 }
 
 .form__small {
@@ -123,3 +133,35 @@
   border-radius: 24px;
   padding: 10px;
 }
+
+.file-upload {
+  display: inline-flex;
+  margin-top: 5px;
+}
+
+.file-upload__input {
+  display: none;
+}
+
+.file-upload__button {
+  -webkit-appearance: none;
+  background: $orange1;
+  border: none;
+  border-radius: 4px;
+  outline: none;
+  padding: 4px 16px;
+  color: #ffffff;
+  font-size: 16px;
+  font-family: $fontFamily;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+// .file-upload__label {
+//   max-width: 250px;
+//   font-size: 0.95em;
+//   text-overflow: ellipsis;
+//   overflow: hidden;
+//   white-space: nowrap;
+//   font-family: 'Ubuntu', sans-serif;
+// }
