--- a/styles/Bag.scss
+++ b/styles/Bag.scss
@@ -1,17 +1,16 @@
 .bagModal {
   position: fixed;
-  top: 50px;
-  right: 0;
-  width: 350px;
-  max-height: 400px;
-  background: #fff;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  border-radius: 20px;
-  border: none;
+  top: 50px;
+  right: 5px;
+  width: 350px;
+  max-height: 400px;
   background: #fff;
+  border-radius: 16px;
+  border: none;
   box-shadow: 5px 0 10px rgba(0, 0, 0, 0.2),
     -5px 0 10px rgba(255, 255, 255, 0.2);
   z-index: 10;
@@ -19,30 +18,36 @@
   &__top {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    padding: 0 10px;
+    width: 100%;
     & h3 {
-      width: 100%;
       text-align: center;
       font-size: 20px;
-    }
-    & button {
-      border: none;
-      outline: none;
-      background: transparent;
-      cursor: pointer;
-      color: $red1;
+      & span {
+        font-size: 14px;
+        font-weight: bold;
+        color: $orange1;
+      }
     }
   }
-  &__total {
+  &__close {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 20px;
-    & h6 {
-      color: $orange1;
-      font-size: 14px;
+    border: none;
+    outline: none;
+    background: $red1;
+    color: $white1;
+    border-radius: 2px;
+    padding: 2px 4px;
+    cursor: pointer;
+    &-icon {
+      width: 16px;
+      height: 16px;
+      margin-left: 4px;
     }
   }
   &__item {
@@ -51,61 +56,66 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     padding: 10px;
     &:hover {
       box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1), 0 -2px 2px rgba(0, 0, 0, 0.1);
     }
     & img {
-      max-height: 70px;
+      width: 50px;
+      height: 50px;
     }
   }
   &__details {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
-    min-width: 70%;
+    width: 100%;
+    padding: 0 5px;
     & h5 {
       color: #000;
-      font-size: 20px;
+      font-size: 16px;
+      font-weight: 300;
+    }
+    &-info {
+      display: block;
     }
     &-qty {
-      display: flex;
+      display: inline-flex;
       flex-direction: row;
       justify-content: flex-end;
       align-items: center;
-      font-size: 14px;
-      width: 100%;
-      max-height: 100%;
-      & h6 {
-        color: $orange1;
-        font-size: 14px;
-      }
       & button {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
         color: #fff;
         margin: 0 5px;
-        border: none;
-        height: 20px;
-        width: 20px;
+        height: 16px;
+        width: 16px;
         border-radius: 50%;
         border: none;
         cursor: pointer;
+        background: transparent;
+        font-size: 16px;
         &.minus {
-          background: $red1;
+          color: $red1;
         }
         &.plus {
-          background: $green1;
+          color: $green1;
         }
       }
     }
+    &-price {
+      font-size: 16px;
+      color: $orange1;
+      font-weight: 500;
+      text-align: center;
+    }
   }
-  & .delete {
-    color: $red1;
-    font-size: 20px;
-    border: none;
-    background: transparent;
-    cursor: pointer;
-  }
+
   & .button-link {
     display: flex;
     flex-direction: row;
@@ -114,7 +124,7 @@
     margin: 5px;
     width: 150px;
     min-height: 40px;
-    border-radius: 10px;
+    border-radius: 8px;
     border: none;
     background: $orange2;
     font-family: $fontFamily;
@@ -123,7 +133,6 @@
     cursor: pointer;
     &:hover {
       background: $orange1;
-      box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
       transition: 0.3s ease-in-out;
     }
   }
