--- a/styles/ProductSite.scss
+++ b/styles/ProductSite.scss
@@ -94,6 +94,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin: 10px 0;
     &-score {
       margin-right: 5px;
       font-size: 16px;
