--- a/styles/Card.scss
+++ b/styles/Card.scss
@@ -52,6 +52,7 @@
     &-name {
       margin: 5px;
       font-size: 16px;
+      font-weight: bold;
       color: $blue;
     }
     &-bakery {
@@ -59,11 +60,17 @@
       font-size: 14px;
       font-weight: normal;
       color: #333;
+      @media screen and (max-width: 620px) {
+        font-size: 12px;
+      }
     }
     &-price {
       margin: 0 5px;
       font-size: 16px;
       color: $orange1;
+      @media screen and (max-width: 620px) {
+        font-size: 12px;
+      }
     }
   }
   &__rank {
@@ -72,19 +79,22 @@
     justify-content: center;
     align-items: center;
     margin: 0 5px;
-    @media screen and (max-width: 620px) {
-      margin-top: -20px;
-    }
     &-score {
       margin-right: 5px;
       font-size: 14px;
       color: $orange1;
+      @media screen and (max-width: 620px) {
+        font-size: 12px;
+      }
     }
     &-star {
       color: $orange2;
       width: 16px;
       height: 16px;
-      
+      @media screen and (max-width: 620px) {
+        width: 12px;
+        height: 12px;
+      }
     }
   }
   &__actions {
