--- a/styles/Table.scss
+++ b/styles/Table.scss
@@ -1,29 +1,147 @@
 .table {
   width: 100%;
   border: none;
-  & tr {
+  border-collapse: separate;
+  border-spacing: 0 5px; 
+  &__tabs {
+    display: flex;
     width: 100%;
-    height: 50px;
-    border-radius: 8px;
-    background: $orange3;
-    text-align: center;
-    & textarea {
-      justify-self: flex-end;
-      width: 100%;
-      max-width: 300px;
-      height: 70px;
-      margin: 5px 10px;
-      border-radius: 16px;
-      background: $white2;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    & button {
+      font-size: 16px;
+      font-weight: bold;
+      background: transparent;
+      padding: 4px 8px;
+      margin: 4px;
       border: none;
       outline: none;
-      font-size: 14px;
-      font-family: $fontFamily;
+      cursor: pointer;
+      border-radius: 4px;
+      border-top: 4px solid transparent;
+      border-bottom: 4px solid transparent;
+      &:hover {
+        background: $orange2;
+        transition: all 0.3s ease-in-out;
+      }
+      &.active {
+        color: $orange1;
+        border-bottom: 4px solid $orange1;
+        &:hover {
+          background: transparent;
+        }
+      }
     }
   }
-  & img {
-    max-height: 45px;
+  & thead {
+    background: transparent;
+    color: #333;
+    & tr th {
+      font-weight: 500;
+      font-size: 14px;
+    }
   }
+  & tbody {
+    & tr {
+      width: 100%;
+      height: 70px;
+      text-align: center;
+      background: transparent;
+      border: none;
+      & td {
+        background: $orange3;
+        height: 100%;
+        &:first-child { border-radius: 4px 0 0 4px; }
+        &:last-child { border-radius: 0 4px 4px 0; }
+      }
+      & .td__product {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        height: 70px;
+        padding: 0 5px;
+        &-image {
+          height: 50px;
+          width: 50px;
+          border-radius: 8px;
+        }
+        &-info {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: flex-start;
+          padding: 0 5px;
+          height: 100%;
+          width: 100%;
+        }
+        &-name {
+          font-size: 16px;
+        }
+        &-bakery {
+          font-size: 12px;
+          color: #333;
+        }
+        &-price {
+          height: 100%;
+          font-size: 16px;
+          font-weight: 400;
+          color: $orange2;
+          border-left: 1px solid #ffffff;
+          &-total {
+            font-size: 16px;
+            font-weight: 500;
+            color: $orange1;
+          }
+        }
+        &-qty {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+          height: 70px;
+          width: 100%;
+          & button {
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            color: #fff;
+            margin: 0 5px;
+            height: 16px;
+            width: 16px;
+            border-radius: 50%;
+            border: none;
+            cursor: pointer;
+            background: transparent;
+            font-size: 16px;
+            &.minus {
+              color: $red1;
+            }
+            &.plus {
+              color: $green1;
+            }
+          }
+        }
+      }
+      & textarea {
+        justify-self: flex-end;
+        width: 100%;
+        max-width: 300px;
+        height: 70px;
+        margin: 5px 10px;
+        border-radius: 16px;
+        background: $white2;
+        border: none;
+        outline: none;
+        font-size: 14px;
+        font-family: $fontFamily;
+      }
+    }
+  }
+  
+  
   & button {
     width: 50px;
     height: 25px;
@@ -73,5 +191,7 @@
       }
     }
   }
-  
+  &__emptyCell {
+    background: #fff !important;
+  }
 }
