--- a/styles/Card.scss
+++ b/styles/Card.scss
@@ -37,7 +37,7 @@
   & h3 {
     margin: 5px;
     font-size: 16px;
-    color: $blue;
+    color: $textblue;
     font-weight: bold;
   }
   &__wrapper{
@@ -53,7 +53,7 @@
       margin: 5px;
       font-size: 16px;
       font-weight: bold;
-      color: $blue;
+      color: $textblue;
     }
     &-bakery {
       margin: 0 5px;
