--- a/styles/Table.scss
+++ b/styles/Table.scss
@@ -95,6 +95,11 @@
             color: $orange1;
           }
         }
+        &-date {
+          font-size: 12px;
+          font-weight: 300;
+          color: #333;
+        }
         &-qty {
           display: flex;
           flex-direction: row;
@@ -121,6 +126,23 @@
             }
             &.plus {
               color: $green1;
+            }
+          }
+        }
+        &-status {
+          & span {
+            font-size: 12px;
+            color: #ffffff;
+            padding: 2px 8px;
+            border-radius: 24px;
+            &.init {
+              background: $blue1;
+            }
+            &.fail {
+              background: $red1;
+            }
+            &.correct {
+              background: $green1;
             }
           }
         }
