--- a/styles/ActionInfo.scss
+++ b/styles/ActionInfo.scss
@@ -1,10 +1,8 @@
 .actionInfo {
-  width: 100%;
-  height: 50px;
-  margin: 10px auto;
+  padding: 4px 8px;
   text-align: center;
   border: none;
-  border-radius: 20px;
+  border-radius: 8px;
   background: lightgreen;
   &.red{
     background: $red1;
