--- a/styles/Styles.scss
+++ b/styles/Styles.scss
@@ -7,6 +7,7 @@
 @import 'PriceBox';
 @import 'Card';
 @import 'ProductSite';
+@import 'Premium';
 @import 'Table';
 @import 'ActionInfo';
 @import 'Bag';
