--- a/styles/Bag.scss
+++ b/styles/Bag.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: center;
   top: 50px;
-  right: 5px;
+  right: 16px;
   width: 350px;
   max-height: 400px;
   background: #fff;
@@ -15,6 +15,23 @@
     -5px 0 10px rgba(255, 255, 255, 0.2);
   z-index: 10;
   overflow-y: scroll;
+  &::-webkit-scrollbar {
+    width: 6px;
+  }
+  &::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 10px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: transparent;
+    border-radius: 10px;
+  }
+  &:hover {
+    &::-webkit-scrollbar-thumb {
+    background: $orange1;
+    border-radius: 10px;
+    }
+  }
   &__top {
     display: flex;
     flex-direction: row;
