--- a/styles/Globals.scss
+++ b/styles/Globals.scss
@@ -36,24 +36,12 @@ a {
   &__name {
     width: 100%;
     margin: 10px auto;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 400;
     position: relative;
-    background: $orange3;
+    background: transparent;
     padding: 5px 10px;
-    &::after {
-      position: absolute;
-      content: '';
-      top: 0;
-      left: 0;
-      width: 60px;
-      height: 100%;
-      clip-path: polygon(0 0, 0 100%, 100% 0);
-      background: $orange1;
-    }
-    & span {
-      margin-left: 30px;
-    }
+    border-bottom: 2px solid $orange1;
   }
   &__highlight {
     font-size: 24px;
